fix gap

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,6 +1,7 @@
 .catalog {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(1, 200px);
+  justify-content: center;
   gap: 48px;
 
   max-width: 944px;
